# tcq

./: .gitignore  .travis.yaml  .travis.yml  Cargo.toml  Cargo.toml~  README.md
benches/: tcq_benches.rs
conda-recipe/: build.sh  meta.yaml
src/: expander.rs  filter.rs  handler.rs  lib.rs  main.rs  runner.rs  spliced_read_utils.rs  validators.rs
test/: align.sh  all.test.bam  deletion_forward.r1as.brd2.bam  deletion_forward.r1as.brd2.bam.bai  deletion_forward.r1as.myc.bam  deletion_forward.r1as.myc.bam.bai  deletion_forward.r1s.brd2.bam  deletion_forward.r1s.brd2.bam.bai  deletion_rev.r1as.brd2.bam  deletion_rev.r1as.brd2.bam.bai  deletion_rev.r1as.myc.bam  deletion_rev.r1as.myc.bam.bai  deletion_rev.r1s.brd2.bam  deletion_rev.r1s.myc.bam  deletion_rev.r1s.myc.bam.bai  insertion_forward.r1as.brd2.bam  insertion_forward.r1as.brd2.bam.bai  insertion_forward.r1as.myc.bam  insertion_forward.r1s.brd2.bam  insertion_forward.r1s.brd2.bam.bai  insertion_forward.r1s.myc.bam.bai  insertion_rev.r1as.brd2.bam  insertion_rev.r1as.brd2.bam.bai  insertion_rev.r1as.myc.bam  insertion_rev.r1as.myc.bam.bai  insertion_rev.r1s.brd2.bam  insertion_rev.r1s.brd2.bam.bai  insertion_rev.r1s.myc.bam  intron_forward.r1as.brd2.bam  intron_forward.r1as.brd2.bam.bai  intron_forward.r1as.myc.bam  intron_forward.r1as.myc.bam.bai  intron_forward.r1s.brd2.bam  intron_forward.r1s.brd2.bam.bai  intron_forward.r1s.myc.bam  intron_forward.r1s.myc.bam.bai  intron_rev.r1as.brd2.bam  intron_rev.r1as.brd2.bam.bai  intron_rev.r1as.myc.bam  intron_rev.r1as.myc.bam.bai  (+7 more)
