[package]
name = "tcq"
version = "0.1.3"
authors = ["mattlawlor <matt.a.lawlor@gmail.com>"]

[dependencies]
clap = {version = "~2.32.0", features = ["yaml"]}
bio = "*"
indicatif = "*"
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", rev = "1f9736ef108762e919802b3d78e22e47533c122c"}
csv = "1"
ndarray={version = "0.11.2", features = ["serde-1"]}
serde="*"
regex="1"
lazy_static="*"
quick-error="1.2.2"
env_logger = "0.5.13"
log = "0.4.0"
