[package]
name = "tcq"
version = "0.5.0-alpha.1"
authors = ["mattlawlor <matt.a.lawlor@gmail.com>"]

[dependencies]
clap = {version = "~2.32.0", features = ["yaml"]}
bio = "*"
indicatif = "*"
rust-htslib = {git = "https://github.com/rust-bio/rust-htslib.git", rev = "6a93aa473077c08aa52be0c2a89f1ee9d1c27609"}
csv = "1"
ndarray={version = "0.11.2", features = ["serde-1"]}
serde="*"
regex="1"
lazy_static="*"
quick-error="1.2.2"
env_logger = "0.5.13"
log = "0.4.0"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "tcq_benches"
harness = false
